@@ -2,27 +2,23 @@
 
 # rgb2c - Convert rgb.txt into C-code
 #
-# Copyright (c) 2009 Andreas K. Foerster
+# Copyright (c) 2009,2012 Andreas K. Foerster
 # Copying and distribution of this file, with or without modification,
 # are permitted in any medium without royalty provided the copyright
 # notice and this notice are preserved.  This file is offered as-is,
 # without any warranty.
 
-BEGIN	{ print "/* automatically generated by rgb2c */"
+BEGIN	{ if (name == "") name = "palette"
+
+          print "/* automatically generated by rgb2c */"
 	  print ""
 	  print "#ifndef _RGB2C"
 	  print "#define _RGB2C"
 	  print ""
-	  print "struct avt_color {"
-	  print "  unsigned char red;"
-	  print "  unsigned char green;"
-	  print "  unsigned char blue;"
-	  print "  const char *color_name;"
-	  print "  };"
-	  print ""
-	  print "static const struct avt_color avt_colors[] = {"
+	  print "static const struct { int number; const char *name; }"
+	  print name "[] = {"
 	  print "  /* default background color for AKFAvatar */"
-	  printf "  {0xE0, 0xD5, 0xC5, \"default\"}"
+	  printf "  {0xE0D5C5, \"default\"}"
 	}
 
 /^!/	{ next }
@@ -30,13 +26,12 @@ BEGIN	{ print "/* automatically generated by rgb2c */"
 NF < 4	{ next }
 
 	{ print ","
-	  printf "  {" $1 ", " $2 ", " $3 ", \""
+	  printf "  {0x%02X%02X%02X, \"", $1, $2, $3
 	  for (i = 4; i <= NF; i++)
-	    if (i < NF) printf $i " " 
-	           else printf $i "\"}"
+	    if (i < NF) printf "%s ", $i
+	           else printf "%s\"}", $i
 	}
 
 END	{ print "\n};"
-	  print ""
-	  print "#endif /* _RGB2C */"
+	  print "\n#endif /* _RGB2C */"
 	}
